##==================================================================================================
## Fluxion - Post-Modern Automatic Derivation
## Copyright : Fluxion Project Contributors
## SPDX-License-Identifier: BSL-1.0
##==================================================================================================
add_subdirectory(bessel)
add_subdirectory(core)
add_subdirectory(math)
add_subdirectory(polynomial)
add_subdirectory(special)
